[package]
name = "sqlite-plugin"
version = "0.2.0"
edition = "2024"
authors = ["orbitinghail <hello@orbitinghail.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/orbitinghail/sqlite-plugin"
homepage = "https://github.com/orbitinghail/sqlite-plugin"
rust-version = "1.85"

description = "A Rust crate for building a custom SQLite virtual file system (VFS)."
keywords = ["sqlite", "vfs", "extension"]

[lints.clippy]
disallowed_methods = "deny"
uninlined-format-args = "warn"
doc-markdown = "warn"
map-unwrap-or = "warn"

[dev-dependencies]
rusqlite = { version = "=0.35.0", features = ["blob", "trace", "bundled"] }
log = { version = "=0.4.27", features = ["std"] }
parking_lot = "=0.12.3"

[build-dependencies]
bindgen = { version = "0.71", default-features = false }

[features]
default = ["static"]
static = []
dynamic = []

[[example]]
name = "memvfs"
crate-type = ["cdylib"]
required-features = ["dynamic"]
